fluxcd/components/netpol/vpn-routed/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-pod-gateway
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: pod-gateway
      podSelector:
        matchLabels:
          app.kubernetes.io/name: pod-gateway
          app.kubernetes.io/controller: main
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: pod-gateway
      podSelector:
        matchLabels:
          app.kubernetes.io/name: pod-gateway
          app.kubernetes.io/controller: main
